--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,43 @@
 /* You can add global styles to this file, and also import other style files */
+/* src/styles.css */
+
+body {
+    background-color: #f8f9fa;
+  }
+
+  h1{
+    margin: 20px;
+  }
+  
+  .container {
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
+  
+  .card {
+    cursor: pointer;
+    transition: transform 0.2s;
+  }
+  
+  .card:hover {
+    transform: scale(1.02);
+  }
+  
+  .add-button {
+    float: right;
+  }
+  
+  .card-title {
+    margin-bottom: 0.75rem;
+  }
+  
+  .btn {
+    margin-right: 10px;
+  }
+  
+  ngx-star-rating {
+    display: inline-block;
+    margin-top: 10px;
+  }
